--- a/UTSA_MAT1224_spring2022.html
+++ b/UTSA_MAT1224_spring2022.html
@@ -397,7 +397,7 @@ c) Find the volume of a solid of revolution with a cavity using the washer metho
 <p>
 A <em>cylindrical shell</em> is the figure obtaine by rotating the region delimited by $x=a$, $x=b$, $y=f(x)$ and the $x$-axis around the $y$-axis. We can see that the volume of this figure is given by
 \[\int_a^b\,2\pi xf(x)\,\mathrm{d}x.\]
-This allows us to compute further volumes which have rotational symmetry.
+This allows us to compute further volumes which have rotational symmetry. Note that if we rotate with respect a different vertical axis, then we don't have $2\pi x$, but $2\pi \mathrm{distance}(x,\text{axis of rotation})$.
 </p>
 <p>
 <em>MathInContext</em>: <a href="https://en.wikipedia.org/wiki/Archimedes">Archimedes</a>, the greatest mathematician of anchient history. His work was a precursor or calculus. Additional materials to learn more: <a href="https://www.youtube.com/watch?v=68bQ3qSl6jc"><em>How taking a bath led to Archimedes' principle</em> by Mark Salata</a>. <a href="https://www.youtube.com/watch?v=0v86Yk14rf8"><em>The real story behind Archimedes' Eureka!</em> by Armand D'Angour</a>.
