--- a/UTSA_MAT1224_spring2022.html
+++ b/UTSA_MAT1224_spring2022.html
@@ -457,8 +457,11 @@ g) Find the hydrostatic force against a submerged vertical plate.
 <em>Moments and Center of Mass</em><a class="btn btn-wiki" href="https://mathresearch.utsa.edu/wiki/index.php?title=Moments_and_Center_of_Mass" role="button">UTSA Wiki</a><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/2-6-moments-and-centers-of-mass" role="button">Sec. 2.6</a></h3>
 <p>
 The <em>center of mass</em> of an object allows us to treat a non-punctual object as a punctual object located at the center of mass for many applications in physcis. This allows us to simplify many computations. For example, <em>Pappus' theorem</em> allows us to compute the volume of rotating a planar region along a line. More concretely, let $K\subset \mathbb{R}^2$ be some region and $L\subset \mathbb{R}^2$ a line not intersecting $K$, then the volume of the object of revolution $S$ obtained by rotating $K$ around $L$ is
-\[\mathrm{vol}(S)=\mathrm{Area}(K)\cdot\mathrm{distance}(L,\mathrm{centroid}(K))\]
+\[\mathrm{vol}(S)=2\pi\, \mathrm{distance}(L,\mathrm{centroid}(K))\, \mathrm{Area}(K)\]
 where $\mathrm{centroid}(K)$ is the center of mass of $K$ assuming that the density of $K$ is uniform.
+</p>
+<p>
+<em>MathInContext</em>: <a href="https://en.wikipedia.org/wiki/Pappus_of_Alexandria">Pappus of Alexandria</a>, one of the last great Greek mathematicians of Antiquity. His owrk was fundamental in the development of analytical geometry by <a href="https://en.wikipedia.org/wiki/Fran%C3%A7ois_Vi%C3%A8te">François Viète</a> and <a href="https://en.wikipedia.org/wiki/Ren%C3%A9_Descartes">René Descartes</a>. Additional materials to learn more: <a href="https://plato.stanford.edu/entries/descartes-mathematics/"><em>Descartes’ Mathematics</em> by Mary Domski in <em>Standford Encyclopedia of Philosophy</em></a>. <a href="https://doi.org/10.1016/0315-0860(77)90105-7"><em>Descartes and the birth of analytic geometry</em> by Eric G. Forbes in <em>Historia Mathematica</em></a>. <a href="https://www.jstor.org/stable/24945951"><em>The Invention of Analytical Geometry</em> by Carl B. Boyer in <em>Scientific American</em> (January 1949)</a>.
 </p>
 <p>
 <b>Learning Objectives:</b>
