--- a/UTSA_MAT1224_spring2022.html
+++ b/UTSA_MAT1224_spring2022.html
@@ -363,7 +363,7 @@ The definite integral is the signed area under a function. Because of this, we c
 \[\int_a^b\,(f(x)-g(x))\,\mathrm{d}x.\]
 </p>
 <p>
-<em>MathInContext</em>: <a href="https://en.wikipedia.org/wiki/Katherine_Johnson">Katherine Johnson</a>, African-American mathematician whose calculations of orbital mechanics where fundamental for the sucess of NASA's first crewed spaceflights. Additional materials to learn more: <a href="https://www.youtube.com/watch?v=nKxgieXQ82w"><em>Katherine Johnson: An American Hero</em> by NASA</a>. <a href="https://www.youtube.com/watch?v=SvsHjWVgqcY&t=33s"><em>The Woman Behind Project Mercury (Outlier)</em> by Timeline</a>. <b><em>Film to Watch:</em></b> <a href="https://en.wikipedia.org/wiki/Hidden_Figures">Hidden Figures</a>.
+<em>MathInContext</em>: <a href="https://en.wikipedia.org/wiki/Katherine_Johnson">Katherine Johnson</a>, African-American mathematician whose calculations of orbital mechanics where fundamental for the sucess of NASA's first crewed spaceflights. Additional materials to learn more: <a href="https://www.youtube.com/watch?v=nKxgieXQ82w"><em>Katherine Johnson: An American Hero</em> by NASA</a>. <a href="https://www.youtube.com/watch?v=SvsHjWVgqcY&t=33s"><em>The Woman Behind Project Mercury (Outlier)</em> by Timeline</a>. <b><em>Film to Watch:</em></b> <a href="https://en.wikipedia.org/wiki/Hidden_Figures">Hidden Figures</a>. Accuracy: <a href="https://www.looper.com/485561/how-accurate-is-hidden-figures/"><em>How Accurate Is Hidden Figures?<em> in Looper</a>
 </p>
 <p>
 <b>Learning Objectives:</b>
@@ -483,6 +483,17 @@ is a full equality.
 </p>
 <p>
 The power of integration by parts is that it allows us to integrate many functions, including some of the well-known ones: $\ln x$, $\arcsin x$, $\arccos x$, and $\arctan x$. Additional functions that we can integrate easy products such as $t^k\mathrm{e}^x$, $t^k\sin x$, $t^k\cos^x$, $\mathrm{e}^x\sin(ax)$ and $\mathrm{e}^x\cos(bx)$. Because of this, integration by parts is a fundamental tool in integration.
+</p>
+<em>MathInContext</em>: <a href="https://en.wikipedia.org/wiki/Alexandria">Alexandria</a>, is a city in the north of Egypt. This city was founded by and named after <a href="https://en.wikipedia.org/wiki/Alexander_the_Great">Alexander III of Macedon (more commonly known in the Western world as Alexander the Great)</a> after conquering Egypt. This city became the cultural center of the Ancient Greek World. This is the reason that people from Alexandria in Ancient times are described as Greek and not as Egyptian. Among the famous intellectual figures that were based in Alexandria, we find the geometer <a href="https://en.wikipedia.org/wiki/Pappus_of_Alexandria">Pappus of Alexandria</a>, the philospher <a href"https://en.wikipedia.org/wiki/Hypatia">Hypathia (of Alexandria)</a>, the geometer <a href="https://en.wikipedia.org/wiki/Apollonius_of_Perga">Apollonius of Perga</a>, and the so-called 'father of geometry' <a href="https://en.wikipedia.org/wiki/Euclid">Euclid (of Alexandria)</a>.</p><p>
+The book <em>Elements</em> of Euclid was a compilation, synthesis and organization of all the mathematical knowledge of his time, becoming the main mathematical reference for the next millenia. When the king of Egypt at the time, Ptolemy I, asked Euclid if there was an easier and quicker path to learning geometry than reading his <em>Elements</em>, Euclid just answered:</p><p style="text-align:center;">
+&ldquo;There is no royal road to geometry&rdquo;
+</p><p>
+As of today this sentence exmplifies the difficulty of learning mathematics, and how one needs to do the work in order to learn them.
+</p>
+<p>Additional materials to learn more: <a href="https://www.youtube.com/watch?v=440gbGszjk8"><em>Euclid: Biography of a Great Thinker</em> by Socratica</a>. <a href="https://www.youtube.com/watch?v=sjTeAjZMa7g"><em>Ancient Greece and Euclid's Elements | Math and the Rise of Civilization | Documentary</em> by Earth Planet</a>. <a href="https://www.youtube.com/watch?v=S0DSM-EkQE8"><em>How to prove a mathematical theory</em> by Scott Kennedy in <em>TED-Ed</em></a>. <a href="https://www.youtube.com/watch?v=n1mwZrVJ-TI"><em>The murder of ancient Alexandria's greatest scholar</em> by Soraya Field Fiorio in <em>TED-Ed</em></a>. <a href="https://www.youtube.com/watch?v=n1mwZrVJ-TI"><em>The murder of ancient Alexandria's greatest scholar</em> by Soraya Field Fiorio in <em>TED-Ed</em></a>. <b>Film to Watch:</b> <a href="https://en.wikipedia.org/wiki/Agora_(film)">Agora</a>. Accuracy: <a href="https://aelarsen.wordpress.com/category/agora/"><em>An Historian Goes to the Movies ~ Exploring history on the screen</em></a>.
+</p>
+<p>
+  <b>Media to Watch:</b> <a href="https://www.youtube.com/watch?v=xWm3b8GWHrg">Video-Lecture on <em>Integration by Parts</em> by Prof. Robert Ghrist. </a>
 </p>
 <p>
 <b>Learning Objectives:</b>
@@ -616,7 +627,7 @@ h) Find the sum of a telescoping series.
 <b>Learning Objectives:</b>
 a) Use the Divergence Test to determine whether a series diverges.
 b) Use the Integral Test to determine whether a series converges or diverges.
-c) Use the p-Series Test to determine whether a series converges or diverges.
+c) Use the $p$-Series Test to determine whether a series converges or diverges.
 d) Estimate the sum of a series by finding bounds on its remainder term.
 </p>
 <h3 id="lec19">Lecture 19 (Apr 3)<br/>
