--- a/UTSA_MAT1224_spring2022.html
+++ b/UTSA_MAT1224_spring2022.html
@@ -506,6 +506,8 @@ e) Solve problems involving applications of integration using integration by par
 <h3 id="lec9">Lecture 9 (Feb 20)<br/>
 <em>Trigonometric Integrals</em><a class="btn btn-wiki" href="https://mathresearch.utsa.edu/wiki/index.php?title=Trigonometric_Integrals" role="button">UTSA Wiki</a><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/3-2-trigonometric-integrals" role="button">Sec. 3.2</a></h3>
 <p>
+Many of the integrals we find in science are of the form
+\[\int\,R(\cos x,\sin x)\,\mathrm{d}x\]
 
 </p>
 <p>
