--- a/non-research_es.html
+++ b/non-research_es.html
@@ -117,7 +117,7 @@
      <ul style="list-style-type:none;font-weight: bold;  padding: 0em;margin-left:0.5em;">
        <li>University of Texas at San Antonio</li>
        <ul style="list-style-type:none;font-weight: normal;padding: 0em;margin-left:1.5em;">
-         <li><em>Calculus II<em>, instructor, SpSe2023 <a class="btn btn-blog" href="UTSA_MAT1224_spring2022"  role="button">Course Webpage</a></li>
+         <li><em>Calculus II<em>, instructor, SpSe2023 <a class="btn btn-blog" href="UTSA_MAT1224_spring2022.html"  role="button">Course Webpage</a></li>
        </ul>
        <li>&Eacute;cole polytechnique</li>
        <ul style="list-style-type:none;font-weight: normal;padding: 0em;margin-left:1.5em;">
