--- a/UTSAProblemSolvingClub_Spring2023.html
+++ b/UTSAProblemSolvingClub_Spring2023.html
@@ -15,14 +15,14 @@
     <meta property="og:url" content="https://tonellicueto.xyz/course.html" />
     <meta property="og:title" content="UTSA Problem-Solving Club (Spring 2023)" /><!--35char-->
     <meta property="og:description" content="Club at UTSA where we discuss problem solving while we enjoy some pizza."><!--65char-->
-    <meta property="og:image" content="https://tonellicueto.xyz/imgs/SM4.png"><!--300KB and minimum dimensions of 300 x 200-->
+    <meta property="og:image" content="https://tonellicueto.xyz/imgs/SMUTSA.png"><!--300KB and minimum dimensions of 300 x 200-->
     <!--Twitter metadata-->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@tonellicueto" />
     <meta name="twitter:creator" content="@tonellicueto" />
-    <meta name="twitter:title" content="Calculus II MAT 1224.009 (Spring 2023) (by Josu&eacute; Tonelli-Cueto)" />
-    <meta name="twitter:description" content="Calculus II (MAT 1224) course at UTSA by Josu&eacute; Tonelli-Cueto in Spring 2022" />
-    <meta name="twitter:image" content="https://tonellicueto.xyz/imgs/SM4.jpg" />
+    <meta name="twitter:title" content="UTSA Problem-Solving Club (Spring 2023) by Christopher Duffer and Dr. Josu&eacute; Tonelli-Cueto in Spring 2022" />
+    <meta name="twitter:description" content="UTSA Problem-Solving Club (Spring 2023) by Christopher Duffer and Dr. Josu&eacute; Tonelli-Cueto in Spring 2022" />
+    <meta name="twitter:image" content="https://tonellicueto.xyz/imgs/SMUTSA.jpg" />
     <!--  Bootstrap core CSS  -->
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
 
@@ -118,7 +118,7 @@ Now, since thinking on these problems in the wild can be extremely hard, we also
   <div class="row" style="text-align:center;"><div class="col-md-6">
     <a class="btn btn-secondary" href="imgs/UTSAPSC_flyer1.jpeg" role="button" style="width:70%;">Flyer 1</a>
   </div><div class="col-md-6">
-    <a class="btn btn-secondary" href="imgs/UTSAPSC_flyer2.jpeg" role="button" style="width:70%;"></a>
+    <a class="btn btn-secondary" href="imgs/UTSAPSC_flyer2.png" role="button" style="width:70%;">Flyer 2</a>
   </div></div>
 <hr/>
 </div>
