--- a/non-research.html
+++ b/non-research.html
@@ -117,6 +117,7 @@
        <li>University of Texas at San Antonio</li>
        <ul style="list-style-type:none;font-weight: normal;padding: 0em;margin-left:1.5em;">
          <li><em>Calculus II<em>, instructor, SpSe2023 <a class="btn btn-blog" href="UTSA_MAT1224_spring2022.html"  role="button">Course Webpage</a></li>
+         <li><em>UTSA Problem Solving Club<em>, organizer, SpSe2023 <a class="btn btn-blog" href="UTSAProblemSolvingClub_Spring2022.html"  role="button">Activity Webpage</a></li>
        </ul>
        <li>&Eacute;cole polytechnique</li>
        <ul style="list-style-type:none;font-weight: normal;padding: 0em;margin-left:1.5em;">
