--- a/non-research_es.html
+++ b/non-research_es.html
@@ -117,11 +117,12 @@
      <ul style="list-style-type:none;font-weight: bold;  padding: 0em;margin-left:0.5em;">
        <li>University of Texas at San Antonio</li>
        <ul style="list-style-type:none;font-weight: normal;padding: 0em;margin-left:1.5em;">
-         <li><em>Calculus II<em>, instructor, SpSe2023 <a class="btn btn-blog" href="UTSA_MAT1224_spring2022.html"  role="button">Course Webpage</a></li>
+         <li><em>Calculus II<em>, instructor, SePr2023 <a class="btn btn-blog" href="UTSA_MAT1224_spring2022.html"  role="button">P&aacute;gina del Curso</a></li>
+         <li><em>UTSA Problem Solving Club<em>, organizador, SePr2023 <a class="btn btn-blog" href="UTSAProblemSolvingClub_Spring2022.html"  role="button">P&aacute;gina de la Actividad</a></li>
        </ul>
        <li>&Eacute;cole polytechnique</li>
        <ul style="list-style-type:none;font-weight: normal;padding: 0em;margin-left:1.5em;">
-         <li><em>3rd year Bachelor Research Project<br/>&ldquo;Topological Data Analysis in Computational Real Algebraic Geometry&rdquo;</em>, supervisor (junto a Elias Tsigaridas) de Aur&egrave;le Bohbot, WiSe2021-22.</li>
+         <li><em>3rd year Bachelor Research Project<br/>&ldquo;Topological Data Analysis in Computational Real Algebraic Geometry&rdquo;</em>, supervisor (junto a Elias Tsigaridas) de Aur&egrave;le Bohbot, SeIn2021-22.</li>
        <li>Technische Universit&auml;t Berlin</li>
        <ul style="list-style-type:none;font-weight: normal;padding: 0em;margin-left:1.5em;">
          <li><em>Effective Algebraic Geometry</em> Seminar, organizador (junto a Peter B&uuml;rgisser y Alperen A. Erg&uuml;r), SeVe 2018. (<span><a href="pdf/Effective_Algebraic_Geometry_Seminar.pdf">temario</a></span>)</li>
