--- a/UTSAProblemSolvingClub_Spring2023.html
+++ b/UTSAProblemSolvingClub_Spring2023.html
@@ -114,6 +114,7 @@ Once a week, we meet to think on how to solve problems. However, the problems th
 <p>
 Now, since thinking on these problems in the wild can be extremely hard, we also study in the club the different ideas and intuitions we can use to approach these problems. In this way, we don't only entertein ourselves with problem-solving, but we train in how to approach problems from different angles and we learn some of the existing approaches. Thus, in the UTSA Problem-Solving Club, we don't only solve problems, but we learn how to become better problem-solvers.
 </p>
+<p>The UTSA Problem-Solving Club was created by <a href="https://math.utsa.edu/directory/eduardo-duenez/">Dr. Eduardo Due&ntilde;ez</a> in 2006.</p>
 <hr/>
   <div class="row" style="text-align:center;"><div class="col-md-6">
     <a class="btn btn-secondary" href="imgs/UTSAPSC_flyer1.jpeg" role="button" style="width:70%;">Flyer 1</a>
