--- a/UTSAProblemSolvingClub_Spring2023.html
+++ b/UTSAProblemSolvingClub_Spring2023.html
@@ -109,12 +109,11 @@
 </div></div>
 <hr/>
 <p>
-Once a week, we meet to think on how to solve problems. However, the problems that concern us are not the problem for which there is a recipe to solve them, but those for which we have to think creatively and ingeniously to come up with a solution. In this sense, our problems are nearer to puzzles than to homework assignments. In the UTSA Problem Solving Club, we meet to think collectivelly on these problem in the company of pizza and fellow UTSA students.
+Once a week, we meet to think on how to solve problems. However, the problems that concern us are not the problem for which there is a recipe to solve them, but those for which we have to think creatively and ingeniously to come up with a solution. In this sense, our problems are nearer to puzzles than to homework assignments. In the UTSA Problem-Solving Club, we meet to think collectivelly on these problem in the company of pizza and fellow UTSA students.
 </p>
 <p>
 Now, since thinking on these problems in the wild can be extremely hard, we also study in the club the different ideas and intuitions we can use to approach these problems. In this way, we don't only entertein ourselves with problem-solving, but we train in how to approach problems from different angles and we learn some of the existing approaches. Thus, in the UTSA Problem-Solving Club, we don't only solve problems, but we learn how to become better problem-solvers.
 </p>
-<p>The UTSA Problem-Solving Club was created by <a href="https://math.utsa.edu/directory/eduardo-duenez/">Dr. Eduardo Due&ntilde;ez</a> in 2006.</p>
 <hr/>
   <div class="row" style="text-align:center;"><div class="col-md-6">
     <a class="btn btn-secondary" href="imgs/UTSAPSC_flyer1.jpeg" role="button" style="width:70%;">Flyer 1</a>
@@ -122,6 +121,7 @@ Now, since thinking on these problems in the wild can be extremely hard, we also
     <a class="btn btn-secondary" href="imgs/UTSAPSC_flyer2.png" role="button" style="width:70%;">Flyer 2</a>
   </div></div>
 <hr/>
+<p style="text-align:center;">The UTSA Problem-Solving Club was created by <a href="https://math.utsa.edu/directory/eduardo-duenez/">Dr. Eduardo Due&ntilde;ez</a> in 2006.</p>
 </div>
 
 <footer>
