--- a/UTSA_MAT1224_spring2023.html
+++ b/UTSA_MAT1224_spring2023.html
@@ -601,7 +601,7 @@ In this lecture, we will learn how to handle rigourously these improper integral
 </p>
 <p>
 <em>MathInContext</em>: <a href="https://en.wikipedia.org/wiki/Georg_Cantor">Georg Cantor</a>, a German mathematician who is one of the founders of <a href="https://en.wikipedia.org/wiki/Set_theory">set theory</a> and who developed the first mathematical treatment of infinity. The importance of Cantor's mathematics in the 20th century cannot be downplayed, being highly controversial at the time his contributions. In the midst of these controversies, <a href="https://en.wikipedia.org/wiki/David_Hilbert">the mathematician David Hilbert</a> said:</p>
-<blockquote cite="https://celebratio.org/Noether_E/article/543/" style="text-align:justify;margin-left: 5%;font-variant: small-caps;">
+<blockquote cite="https://en.wikipedia.org/wiki/Cantor%27s_paradise" style="text-align:center;font-variant: small-caps;">
 No one shall expel us from the paradise which Cantor has created for us.
 </blockquote>
 <p>Additional materials to learn more:
